<resources>
	<string name="app_name">RSSTestApp</string>
	<string name="action_settings">Settings</string>
	<string name="error">Check internet connection</string>
	<string name="check_internet">Check internet connection or RSS address</string>
	<string name="something_went_wrong">Something went wrong..</string>
	<string name="dont_have_browser">You don\'t have any browser to open web page</string>
	<string name="channel_already_exist">Channel already exist</string>
	<string name="title_is_empty">Title is empty</string>
	<string name="link_is_empty">Link is empty</string>
	<string name="add">Add</string>
	<string name="add_chanel">Add chanel</string>
	<string name="title_hint">Title</string>
	<string name="link_hint">Link</string>
	<string name="cancel">Cancel</string>
	<string name="change">Change</string>
	<string name="delete">Delete</string>
	<string name="settings_title">Channel settings: </string>
	<string name="loading_feeds">Loading feeds..</string>
	<string name="add_some_channels">Add some channels</string>
</resources>
